Name:                markdown
Version:             0.1.13.1
Synopsis:            Convert Markdown to HTML, with XSS protection
Description:         This library leverages existing high-performance libraries (attoparsec, blaze-html, text, and conduit), and should integrate well with existing codebases.
Homepage:            https://github.com/snoyberg/markdown
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Extra-source-files:  test/examples/*.html
                   , test/examples/*.md
                   , test/Tests/*.html
                   , test/Tests/*.text
Cabal-version:       >=1.8

Library
  Exposed-modules:     Text.Markdown
                       Text.Markdown.Block
                       Text.Markdown.Inline
  other-modules:       Text.Markdown.Types
  Build-depends:       base                   >= 4       && < 5
                     , blaze-markup           >= 0.6
                     , blaze-html             >= 0.4
                     , attoparsec             >= 0.10
                     , transformers           >= 0.2.2
                     , conduit                >= 1.1
                     , conduit-extra          >= 1.1
                     , text
                     , data-default           >= 0.3
                     , xss-sanitize           >= 0.3.3
                     , containers
  ghc-options:       -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    other-modules: Block
                   Inline
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: markdown
                 , base             >= 4       && < 5
                 , hspec            >= 1.3
                 , blaze-html
                 , text
                 , system-fileio
                 , system-filepath
                 , transformers
                 , conduit
                 , conduit-extra
                 , containers

source-repository head
  type:     git
  location: git://github.com/snoyberg/markdown.git
